--- a/paper/CCT_with_data.tex
+++ b/paper/CCT_with_data.tex
@@ -50,13 +50,25 @@
 \section{Introduction}
 The mental health and forensic risk factors of patients in forensic psychiatric hospitals is regularly monitored with methods such as
 Routine Outcome Monitoring \parencite{deBeurs2011ROM}.
+A staff member (e.g., a clinician or psychiatrist), henceforth a \emph{rater}, scores a patient on variety of criteria, such as ....
+Using these scores raters can monitor the mental state of a patient over time, answer questions about the effectiveness of a treatment, or warn staff members about which patients are at risk for turning violent. 
 
-Forensic psychiatric hospitals routinely assess the
 
-Forensic psychiatric hospitals monitor the mental health and forensic risk factors of their patients at regular intervals, typically using a method such as Routine Outcome Monitoring \parencite{deBeurs2011ROM}.
+For each patient, there are usually multiple scores available on different items, given by different raters.
+The added value of the scores hinges on the method used to aggregate the scores.
+Standard practice is to average the scores.
+This is suboptimal, as this treats raters as exchangeable and analyzes patients independently.
+
+
+In previous work, we used Cultural Consensus Theory \parencite[CCT;][]{romney1986culture, batchelder1988test, batchelder2012cultural} to develop an appropriate model to analyze such data that accounts for the hierarchical structure among patients, raters, and items \parencite{vandenBergh2020cultural}.
+Here, we apply this model to data and uses its inferences to predict whether or not a patient becomes violent.
+Furthermore, we compare the predictive performance to that of frequently used machine learning models.
+In addition, we interpret the model and ...
+The paper is concluded with a discussion on ...
+
 
 \section{Data of 105 patients in the Mesdag clinic}
-\subsection{How it was collected}
+\subsection{Method of collection}
 \subsection{IFTE}
 
 The data were collected using a Routine Outcome Monitoring instrument called the the Instrument for Forensic Treatment Evaluation (IFTE).
@@ -98,7 +110,7 @@ Cultural consensus theory (CCT) provides a model-based framework for pooling inf
 There exist a variety of CCT models, each applicable to different types of data.
 For example, the General Condorcet model \parencite{Batchelder1986statistical} applies to dichotomous data, the Latent Truth Rater model \parencite{Anders2015cultural} is suited for ordinal data, and the Continous Response model \parencite{anders2014cultural}.
 
-small description
+\iffalse
 \subsection{The Continuous Response Model}
 The Continuous Response Model (CRM) is a CCT model for continuous data \parencite{anders2014cultural}.
 Figure~\ref{model:CRM_p} shows a graphical model of the CRM with a few adjustments.
@@ -167,6 +179,7 @@ Different cultural truths allows the ``true answer'' on an item to vary across p
 Another difference with respect to our previous work \parencite{vandenBergh2020cultural} is that the item difficulty $\ItemDifficulty$ does not vary across patients.
 During simulations with a similar ratio of patients to raters, we found that this parameter cannot be reliably estimated.
 Therefore we opted to constrain this parameter across patients.
+\fi
 
 \subsection{The Latent Truth Rater Model}
 The Latent Truth Rater Model (LTM) is a CCT model for ordinal data \parencite{Anders2015cultural}.
@@ -239,7 +252,7 @@ This complicates interpreting the differences between the thresholds across rate
 Second, we previously allowed the item difficulty parameter to vary across patients, which captures that some items may be more difficulty or easy to assess for some patients (e.g., some patients may cooperate more than others).
 This parameter is mainly informed by the number or raters and there needs to be a sufficient amount of raters that score each patient for a reliable estimate.
 However, we noticed when simulating data with a ratio of raters to patients like in the data at hand that there are simply too few observations to reliably estimate the deviations in item difficulty across patients.
-\DB{We could also look at a patient specific ``cooperativeness'' parameter. Rather than doing $\ItemDifficulty_{\Ipatient\Iitem}$, which introduces $\Tpatient\times\Titem$ parameters, the logistic scale would become $\frac{\ItemDifficulty_\Iitem}{\RaterCompetence_\Irater \times\text{Cooperativeness}_\Ipatient}$. This introduces an additional $\Tpatient$ parameters.}
+% \DB{We could also look at a patient specific ``cooperativeness'' parameter. Rather than doing $\ItemDifficulty_{\Ipatient\Iitem}$, which introduces $\Tpatient\times\Titem$ parameters, the logistic scale would become $\frac{\ItemDifficulty_\Iitem}{\RaterCompetence_\Irater \times\text{Cooperativeness}_\Ipatient}$. This introduces an additional $\Tpatient$ parameters.}
 
 
 %$\Appraisal_{\Ipatient\Iitem\Irater} \leq \Threshold_{\Irater1}$ implies that $x_{\Ipatient\Iitem\Irater} = 1$, $\Threshold_{\Irater, \Incat - 1} < \Appraisal_{\Ipatient\Iitem\Irater} \leq \Threshold_{\Irater\Incat}$ implies that $x_{\Ipatient\Iitem\Irater} = \Incat$, and $\Appraisal_{\Ipatient\Iitem\Irater} > \Threshold_{\Irater\Tncat}$ implies that $x_{\Ipatient\Iitem\Irater} = \Tncat$.
