Updates from Overleaf

--- a/paper/references.bib
+++ b/paper/references.bib
@@ -18517,7 +18517,7 @@ pages = {352--362}
 }
 
 @article{vanBuuren2011mice,
-	title = {{mice}: Multivariate Imputation by Chained Equations in R},
+	title = {{mice}: Multivariate Imputation by Chained Equations in {R}},
 	author = {Stef {van Buuren} and Karin Groothuis-Oudshoorn},
 	journal = {Journal of Statistical Software},
 	year = {2011},
@@ -18528,7 +18528,7 @@ pages = {352--362}
 }
 
 @article{spreen2013handleiding,
-	title={Handleiding HKT-R},
+	title={Handleiding {HKT-R}},
 	author={Spreen, M and Brand, E and Ter Horst, P and Bogaerts, S},
 	journal={Historische Klinische Toekomst--Revisie},
 	year={2013}
@@ -18545,5 +18545,13 @@ pages = {352--362}
 	publisher={Taylor \& Francis}
 }
 
-
-@Comment{jabref-meta: databaseType:bibtex;}
+@article{schuringa2014inter,
+  title={Inter-rater and test-retest reliability, internal consistency, and factorial structure of the instrument for forensic treatment evaluation},
+  author={Schuringa, Erwin and Spreen, Marinus and Bogaerts, Stefan},
+  journal={Journal of Forensic Psychology Practice},
+  volume={14},
+  number={2},
+  pages={127--144},
+  year={2014},
+  publisher={Taylor \& Francis}
+}
