--- a/paper/CCT_with_data.tex
+++ b/paper/CCT_with_data.tex
@@ -7,9 +7,15 @@
 \usepackage{amsmath,amsfonts,amssymb, bm}
 \usepackage{graphicx,verbatimbox}
 \usepackage[colorlinks=true, allcolors=blue]{hyperref}
+\usepackage[margin=1in]{geometry}
 \usepackage{authblk}
 \usepackage{nicefrac}
 \usepackage{svg}
+\usepackage{booktabs}
+\usepackage{makecell} %\thead
+\usepackage{array}
+\newcolumntype{H}{>{\setbox0=\hbox\bgroup}c<{\egroup}@{}} % hidden column
+
 
 %opening
 \title{Augmenting Predictive Models in Forensic Psychiatry with Cultural Consensus Theory}
@@ -17,7 +23,7 @@
 \author[2]{Erwin Schuringa}
 \author[1]{Eric-Jan Wagenmakers}
 \affil[1]{Department of Psychological Methods, University of Amsterdam}
-\affil[2]{Forensic Psychiatric Centre Dr. S. van Mesdag}
+\affil[2]{Forensic Psychiatric Center Dr. S. van Mesdag}
 \date{}
 
 %\usepackage[dvipsnames]{xcolor}
@@ -28,12 +34,16 @@
 \definecolor{colorEJ} {RGB}{205,255,205}
 
 \newcommand{\DB}[1]{\todo[inline, color=colorDon]{DB: {#1}}}
+\newcommand{\DBB}[1]{\todo[color=colorDon]{DB: {#1}}}
 \newcommand{\EJ}[1]{\todo[inline, color=colorEJ]{EJ: {#1}}}
 
-%\graphicspath{../figures}
+\newcommand{\githuburl}{\url{https://github.com/vandenman/CCT-Logistic}}
+
 \graphicspath{{../figures/}{../graphicalmodels/}}
 
 \addbibresource{references.bib}
+
+\newcommand{\fig}{Fig.}
 
 \input{mycommands.tex}
 
@@ -50,140 +60,101 @@
 \section{Introduction}
 The mental health and forensic risk factors of patients in forensic psychiatric hospitals is regularly monitored with methods such as
 Routine Outcome Monitoring \parencite{deBeurs2011ROM}.
-A staff member (e.g., a clinician or psychiatrist), henceforth a \emph{rater}, scores a patient on variety of criteria, such as ....
-Using these scores raters can monitor the mental state of a patient over time, answer questions about the effectiveness of a treatment, or warn staff members about which patients are at risk for turning violent. 
+A staff member (e.g., a clinician or psychiatrist), henceforth a \emph{rater}, scores a patient on variety of criteria, such as problematic behavior (e.g., hostility) or protective behavior (e.g., coping skills).
+These scores are used to track the mental state of patients over time, to measure the effectiveness of treatment, and as a risk indicator for violent outbursts by patients.
+% Using these scores raters can monitor the mental state of a patient over time, answer questions about the effectiveness of a treatment, or warn staff members about which patients are at risk for turning violent. 
+
+Typically, multiple raters score each patient on different items.
+Standard practice is to average the scores across raters and use the averages to inform decisions.
+However, this is suboptimal for multiple reasons \parencite{vandenBergh2020cultural}.
+For example, taking the average implies that raters are interchangeable and patients are independent, rather than taking into account raters' bias or patients' offense.
+% For example, this implies raters are exchangeable and patients are independent, rather than accounting for raters' biases or patients' criminal offense.
+
+% In a typical data set there are for each patient multiple scores available on different items, given by different raters.
+% Standard practice is to average the scores across raters and use those to inform decisions.
+% This practice is suboptimal, as it treats raters as exchangeable and analyzes patients independently.
+
+An improvement over averaging the scores is to use Cultural Consensus Theory \parencite[CCT;][]{romney1986culture, batchelder1988test, batchelder2012cultural} to construct an appropriate model for the scores that accounts for the hierarchical structure among patients, raters, and items. 
+In previous work, we developed such a model based on the Latent Truth Rater model \parencite[LTM; ][]{Anders2015cultural}, and demonstrated that, in theory, this model predicted better than the average and several machine learning alternatives.
+However, due to the lack of an empirical dataset, we could not demonstrate whether the theoretical claims hold up in practice.
+
+% In previous work, we used Cultural Consensus Theory \parencite[CCT;][]{romney1986culture, batchelder1988test, batchelder2012cultural} to develop an appropriate model to analyze such data that accounts for the hierarchical structure among patients, raters, and items \parencite{vandenBergh2020cultural}.
+
+Here, we apply the CCT-based model to data of a Dutch maximum-security forensic psychiatric center and use its inferences to predict whether or not a patient becomes violent.
+First, we briefly introduce the LTM model used and discuss two changes made compared to \textcite{vandenBergh2020cultural}.
+Afterward, we use the LTM to augment a logistic regression.
+We use the augmented model to predict violent outbursts in patients and compare the predictive performance to that of frequently used machine learning models.
+We find that our LTM approach outperforms all other methods, albeit by a small margin.
+Next, we interpret the fitted model and ...
+% The paper is concluded with a discussion on how the data collection could be adjusted to maximize the benefit of our CCT-based approach.
+Finally, we discuss some practical limitations of the data set at hand and how future monitoring of patients could be adjusted to maximize the added benefit of our CCT-based approach.
 
 
-For each patient, there are usually multiple scores available on different items, given by different raters.
-The added value of the scores hinges on the method used to aggregate the scores.
-Standard practice is to average the scores.
-This is suboptimal, as this treats raters as exchangeable and analyzes patients independently.
-
-
-In previous work, we used Cultural Consensus Theory \parencite[CCT;][]{romney1986culture, batchelder1988test, batchelder2012cultural} to develop an appropriate model to analyze such data that accounts for the hierarchical structure among patients, raters, and items \parencite{vandenBergh2020cultural}.
-Here, we apply this model to data and uses its inferences to predict whether or not a patient becomes violent.
-Furthermore, we compare the predictive performance to that of frequently used machine learning models.
-In addition, we interpret the model and ...
-The paper is concluded with a discussion on ...
-
-
-\section{Data of 105 patients in the Mesdag clinic}
+\section{Mesdag Data}
+\DB{Edwin, het zou fijn zijn als jij naar deze sectie kan kijken!}
 \subsection{Method of collection}
-\subsection{IFTE}
+The data were collected in the Dutch maximum-security Forensic Psychiatric Center Dr. S. van Mesdag in the period XXX to XXX.\DBB{April 2010 t/m juli 2016 gok ik gebaseerd op Schuringa et al. 2016.}
+The individual records were retrospectively merged into a single data set.
 
+\subsection{IFTE}
 The data were collected using a Routine Outcome Monitoring instrument called the the Instrument for Forensic Treatment Evaluation (IFTE).
 The IFTE consists of 22 items, of which 14 items are criminogenic need indicators of the Dutch risk assessment instrument HKT-R \parencite{spreen2013handleiding}, five items were designed in consultation with psychologists and psychiatrists, and three items are based on the Atascadero Skills Profile \parencite{vess2001development}.
 The 22 items can be grouped into three factors, Protective behaviors, Problematic behaviors, and Resocialization Skills.
-All items are scored on a 17 point scale.
+The individual items are shown in \autoref{tb:IFTE_items}.
+All items are scored on a 18 point scale.
 
-%\begin{quote}
-%The Instrument for Forensic Treatment Evaluation is a multidisciplinary Routine Outcome Monitoring instrument. The IFTE is filled out in approximately 10 min every six months by all members of a patient's treatment team independently. The IFTE contains 22 indicators, comprising all 14 clinical criminogenic need indicators of the Dutch risk assessment instrument HKT-R (Spreen et al., 2014), three indicators based on the Atascadero Skills Profile (ASP; Vess, 2001), and five indicators designed in consultation with psychologists and psychiatrists. The 22 IFTE indicators are divided into three factors, namely Protective behaviors, Problematic behaviors and Resocialization Skills. Indicators of the IFTE are measured on a 17-point scale.
-%\end{quote}
+\subsection{Covariates}
+In addition to the IFTE, several other background variables about the patients are considered for predicting violent behavior.
+These are age (0-30, 31-40, 41-50, or 55+), treatment duration (0-2 years, 2-4 years, or 6+ years), diagnosis (Schizophrenia or other psychotic disorder, Personality disorder, Personality disorder B, Autism spectrum disorder, As 1 overig), Offence (Manslaughter, Heavy violence, Murder, Arson, Power with violence, Power/ medium violence), violent behavior before measurement 1, and violent behavior inbetween measurements 1 and 2.
+\DB{Check de juiste engelse vertalingen.}
 
 
-\subsection{Descriptive Statistics}
-\begin{itemize}
-	\item Amount of patients, raters, and items.
-	\item Sparsity of patient-rater combinations.
-\end{itemize}
+\subsection{Descriptives}
+\autoref{fig:descriptives_scores_hist} shows a histogram of the raw scores across all IFTE items, raters, and patients.
+It is clear that some scores are given more often than others, such as 1, 2, 6, 10, and 14.
+Furthermore, it appears that, with the exception of 1, even scores are given more often than odd scores.
 
+
+\begin{figure}[!ht]
+	\centering
+	\includesvg[width=\textwidth]{descriptives_scores}
+	\caption{Histogram of observed scores across all patients, items, raters, and time points.}
+	\label{fig:descriptives_scores_hist}
+\end{figure}
+
+Not all raters rated every patient, in contrast, \autoref{fig:descriptives_raters_by_patients} shows that the rater by patient matrix is rather sparse.
+\begin{figure}[!ht]
+	\centering
+	\includesvg[width=\textwidth]{descriptives_raters_by_patients}
+	\caption{Heatmap of observed scores of rater ($x$-axis) against patients ($y$-axis).}
+	\label{fig:descriptives_raters_by_patients}
+\end{figure}
 
 \section{Cultural Consensus Theory}
 
-Cultural Consensus Theory (CCT) sometimes called also known as ``test theory without an answer key'' \parencite{batchelder1988test}, is a method to discover the ''true answer`` for items from the consensus among the responses.
-For example, suppose a mentally ill patient is scored by multiple raters on aggressiveness.
+Cultural Consensus Theory, sometimes called ``test theory without an answer key'' \parencite{batchelder1988test}, is a method to discover the ''true answer`` for items from the consensus among the responses.
+For example, suppose a patient is scored by multiple raters on aggressiveness.
 Multiple scores are obtained that need to be aggregated to arrive at a single score for this patient.
 The naive solution is to average these scores.
-However, as shown in Figure~\ref{fig:misFitMean} averaging may lead to severely biased estimates.
-\DB{Figure here of score means versus true latent parameter for data simulated under the LTM.}
-The average score disregards all additional information that is available.
-It ignores the individual differences between raters, for example, this assumes that all psychiatrists score aggressiveness in the same way, and group differences among raters, for example, there is no difference in scores by psychiatrists as opposed to clinicians, or other staff member.
-In addition, the average ignores any additional information about the patient at hand, such as the committed crimes and diagnoses.
-\begin{figure}
+However, as shown in \autoref{fig:misFitMean} averaging may lead to severely biased estimates.
+\begin{figure}[!ht]
 	\centering
 	\includesvg[width=\textwidth]{misfitMean}
 	\caption{True item scores (x-axis) versus the sample mean across raters (y-axis).}
 	\label{fig:misFitMean}
 \end{figure}
+The average score disregards all additional information that is available.
+It ignores the individual differences between raters, for example, this assumes that all psychiatrists score aggressiveness in the same way, and it ignores group differences among raters, for example, there is no difference in scores by psychiatrists as opposed to clinicians, or other staff member.
+In addition, the average ignores any additional information about the patient at hand, such as offence and diagnosis.
 
-Cultural consensus theory (CCT) provides a model-based framework for pooling information from multiple raters to form a consensus \parencite{anders2014cultural}.
+Cultural consensus theory provides a model-based framework for pooling information from multiple raters to form a consensus \parencite{anders2014cultural}.
 There exist a variety of CCT models, each applicable to different types of data.
-For example, the General Condorcet model \parencite{Batchelder1986statistical} applies to dichotomous data, the Latent Truth Rater model \parencite{Anders2015cultural} is suited for ordinal data, and the Continous Response model \parencite{anders2014cultural}.
-
-\iffalse
-\subsection{The Continuous Response Model}
-The Continuous Response Model (CRM) is a CCT model for continuous data \parencite{anders2014cultural}.
-Figure~\ref{model:CRM_p} shows a graphical model of the CRM with a few adjustments.
-
-%\begin{figure}[!ht]
-%	\begin{minipage}{0.5\textwidth}
-%		\centering
-%		\includegraphics[width=\textwidth, page=1]{../graphicalmodels/graphicalmodels.pdf}
-%	\end{minipage}\hfill
-%	\begin{minipage}{0.5\textwidth}
-%		{\normalsize
-%			\begin{align*}
-%			x_{\Iitem\Irater}      			&\sim \dnorm{\mu_{\Iitem\Irater}}{\sigma^2_{\Iitem\Irater}} \\
-%			\mu_{\Iitem\Irater}    			&\assignment \RaterScale_\Irater \ItemTruth_{\Iitem} + \RaterShift_\Irater  \\
-%			\sigma_{\Iitem\Irater} 			&\assignment \RaterCompetence_\Irater \ItemDifficulty_\Iitem\\
-%			\ItemTruth_\Iitem	   			&\sim \dnorm{\mu_\ItemTruth}{\sigma^2_\ItemTruth}\\
-%			\log \ItemDifficulty_\Iitem 	&\sim \dnorm{\mu_\ItemDifficulty}{\sigma^2_\ItemDifficulty}\\
-%			\log \RaterScale_\Irater     	&\sim \dnorm{\mu_\RaterScale}{\sigma^2_\RaterScale}\\
-%			\RaterShift_\Irater	   			&\sim \dnorm{\mu_\RaterShift}{\sigma^2_\RaterShift}\\
-%			\log \RaterCompetence_\Irater	&\sim \dnorm{\mu_\RaterCompetence}{\sigma^2_\RaterCompetence}\\
-%			\end{align*}
-%		}%
-%	\end{minipage}
-%	\caption{Graphical model of the Continuous Response Model for a single patient.}
-%	\label{model:CRM_1}
-%\end{figure}
-
-\begin{figure}[!ht]
-	\begin{minipage}{0.5\textwidth}
-		\centering
-		\includegraphics[width=\textwidth, page=3]{graphicalmodels.pdf}
-	\end{minipage}\hfill
-	\begin{minipage}{0.5\textwidth}
-		{\normalsize
-			\begin{align*}
-			x_{\Ipatient\Iitem\Irater}      &\sim \dnorm{\mu_{\Ipatient\Iitem\Irater}}{\sigma^2_{\Ipatient\Iitem\Irater}} \\
-			\mu_{\Ipatient\Iitem\Irater}    &\assignment \RaterScale_\Irater \ItemTruth_{\Ipatient\Iitem} + \RaterShift_\Irater  \\
-			\sigma_{\Iitem\Irater} 			&\assignment \RaterCompetence_\Irater \ItemDifficulty_\Iitem\\
-			\ItemTruth_{\Ipatient\Iitem}	&\sim \dnorm{\mu_\ItemTruth}{\sigma^2_\ItemTruth}\\
-			\log \ItemDifficulty_\Iitem 	&\sim \dnorm{\mu_\ItemDifficulty}{\sigma^2_\ItemDifficulty}\\
-			\log \RaterScale_\Irater     	&\sim \dnorm{\mu_\RaterScale}{\sigma^2_\RaterScale}\\
-			\RaterShift_\Irater	   			&\sim \dnorm{\mu_\RaterShift}{\sigma^2_\RaterShift}\\
-			\log \RaterCompetence_\Irater	&\sim \dnorm{\mu_\RaterCompetence}{\sigma^2_\RaterCompetence}\\
-			\end{align*}
-		}%
-	\end{minipage}
-	\caption{Graphical model of the Continuous Response Model for multiple patients.}
-	\label{model:CRM_p}
-\end{figure}
-Here, $x_{\Ipatient\Iitem\Irater}$ is the score given to patient $\Ipatient$ on item $\Iitem$ by rater $\Irater$.
-This score is assumed to be normally distributed with mean $\mu_{\Ipatient\Iitem\Irater}$ and standard deviation $\sigma_{\Iitem\Irater}$.
-The mean is composed of a patients true score on a particular item $\ItemTruth_{\Ipatient\Iitem}$ and a rater-specific scale $\RaterScale_\Irater$ and shift $\RaterShift_\Irater$.
-The standard deviation is comprised of an item-specific difficulty $\ItemDifficulty_\Iitem$ and a rater-specific competence $\RaterCompetence_\Irater$.
-The ratio of the item difficulty and rater competence determines how precise an answer is retrieved.
-
-There are three differences in Figure~\ref{model:CRM_p} compared to the CRM as described in \textcite{anders2014cultural}.
-First, we do not allow for multiple cultural truths among the raters.
-In our application the raters are professionally trained and we believe the remaining rater parameters suffice to capture differences between raters.
-Second, \parencite{anders2014cultural} considered two levels of nesting, items and respondents, whereas we consider three levels of nesting, patients, items, and raters.
-By dropping the patient indices one
-
-Third, we adjusted the prior distributions opposed
-
-
-Different cultural truths allows the ``true answer'' on an item to vary across patients
-Another difference with respect to our previous work \parencite{vandenBergh2020cultural} is that the item difficulty $\ItemDifficulty$ does not vary across patients.
-During simulations with a similar ratio of patients to raters, we found that this parameter cannot be reliably estimated.
-Therefore we opted to constrain this parameter across patients.
-\fi
+For example, the General Condorcet model \parencite{Batchelder1986statistical} applies to dichotomous data, the Continuous Response model \parencite{anders2014cultural} is suited for continuous data, and the Latent Truth Rater model \parencite{Anders2015cultural} is suited for ordinal data.
+As the ratings on the are ordinal, we use the Latent Truth Rater model to analyze the Mesdag data.
 
 \subsection{The Latent Truth Rater Model}
 The Latent Truth Rater Model (LTM) is a CCT model for ordinal data \parencite{Anders2015cultural}.
-Previously, we extended the LTM to handle data from multiple patients \parencite{vandenBergh2020cultural} and Figure~\ref{model:LTM_p} shows the LTM for multiple patients.
+Previously, we extended the LTM to handle data from multiple patients \parencite{vandenBergh2020cultural} and \autoref{model:LTM_p} shows the LTM for multiple patients.
 \begin{figure}[!ht]
 	\begin{minipage}{0.55\textwidth}
 		\centering
@@ -247,12 +218,13 @@ There are $\Tncat - 1$ ordered thresholds for each rater, which are assigned a s
 There are two differences in the model specification above compared to our previous work \parencite{vandenBergh2020cultural}.
 %We made two changes to the model, because when simulating data with similar characteristics as the Mesdag data, as
 First, we previously modeled the thresholds using two rater specific parameters.
-However, in simulations we noticed that these two parameters provide too little flexibility when the ordinal scale consists of 18 categories, as in the Mesdag data.
+However, in simulations we noticed that these two parameters provide too little flexibility when the ordinal scale consists of 18 categories and has a multimodal distribution (see \autoref{fig:descriptives_scores_hist}), as in the Mesdag data.
 Therefore we decided to model the thresholds individually.
 This complicates interpreting the differences between the thresholds across raters, however, that is also not the goal of this paper.
 Second, we previously allowed the item difficulty parameter to vary across patients, which captures that some items may be more difficulty or easy to assess for some patients (e.g., some patients may cooperate more than others).
 This parameter is mainly informed by the number or raters and there needs to be a sufficient amount of raters that score each patient for a reliable estimate.
-However, we noticed when simulating data with a ratio of raters to patients like in the data at hand that there are simply too few observations to reliably estimate the deviations in item difficulty across patients.
+However, when simulating data with a ratio of raters to patients similar to that in the data at hand that we noticed that there are simply too few observations to reliably estimate the deviations in item difficulty across patients.
+Therefore, we only vary item difficulty across items and not across patients. 
 % \DB{We could also look at a patient specific ``cooperativeness'' parameter. Rather than doing $\ItemDifficulty_{\Ipatient\Iitem}$, which introduces $\Tpatient\times\Titem$ parameters, the logistic scale would become $\frac{\ItemDifficulty_\Iitem}{\RaterCompetence_\Irater \times\text{Cooperativeness}_\Ipatient}$. This introduces an additional $\Tpatient$ parameters.}
 
 
@@ -275,7 +247,7 @@ We do so in a fully Bayesian approach, that is, we constructed a joint model for
 An alternative is to fit the LTM separately and then use e.g., the posterior means in a second step in a logistic regression.
 While this would be more computationally efficient, it would also ignore the uncertainty in the analysis of the patient ratings.
 }
-Figure~\ref{model:Logistic_LTM} shows a graphical model of the logistic regression combined with the LTM.
+\autoref{model:Logistic_LTM} shows a graphical model of the logistic regression combined with the LTM.
 The latent truth for each patient on each item is seen as a covariate in the logistic regression model.
 
 %with a logistic regression
@@ -305,62 +277,78 @@ The latent truth for each patient on each item is seen as a covariate in the log
 	\label{model:Logistic_LTM}
 \end{figure}
 
-\subsection{The Latent Truth Rater Model}
+% \iffalse
+% \subsection{Simulation Study}
 
-%\begin{figure}
-%	\centering
-%	\includegraphics[width=\textwidth, page=5]{graphicalmodels.pdf}
-%	\caption{Graphical model of Logistic Regression Augmented with the Latent Truth Rater Model.}
-%	\label{model:Logistic_LTM}
-%\end{figure}
-%
-%\begin{figure}
-%	\centering
-%	\includegraphics[width=\textwidth, page=6]{graphicalmodels.pdf}
-%	\caption{Graphical model of Logistic Regression Augmented with the Latent Truth Rater Model.}
-%	\label{model:Logistic_LTM}
-%\end{figure}
+% Before analyzing the data with the LTM, it is typically a good idea to run a simulation study to
 
-\subsection{Simulation Study}
+% \subsubsection{Do we actually want to report this?}
 
-Before analyzing the data with the LTM, it is typically a good idea to run a simulation study to
+% \subsubsection{Fit of the LTM}
+% \fi
 
-\subsubsection{Do we actually want to report this?}
+\section{Predictive Performance}
 
-\subsubsection{Fit of the LTM}
+Here we compare the predictive performance of the Logistic regression augmented with the LTM (LR-LTM) to several reasonable alternatives and three baseline models.
+As a first baseline model we use an intercept only logistic regression (LR-Intercept), which quantifies if we can outperform the base-prevalence of violence.
+The second baseline model we use is a logistic regression model with all covariates but not the IFTE items (LR-No IFTE).
+% TODO: wat is de toegevoegde waarde van model 3 bovenop model 2?
+As a third baseline model, we use an logistic regression model with only prior violence as predictors (LR-Violence).
+As more reasonable alternatives, we consider logistic regression (LR), random forest, and boosted regression trees (GBM) which have access to all history of violence, patient covariates, and IFTE scores.
+These four alternative have in common that they are designed for purely rectangular data.
+That is, each row of the data set contains one outcome (aggressive behavior or not) and a number of predictors.
+However, the raw data of the IFTE contains repeated observations, since patients were rated multiple times by different raters.
+To accommodate this we average across different raters to obtain a single scores for each item and time point.
+By comparing these models we aim to answer the following three questions: (1) Can predictive models outperform the base-prevalence of violent behavior? (2) Do models with the IFTE scores perform better than the baseline models without? (3) Does the LR-LTM perform better than the models that naively average across raters?
+
+To examine predictive performance we used 10-fold stratified cross validation.
+Each fold consisted of 8 nonviolent observations and 2 or 3 violent observations.
+% For every fold, the data were split into a training set (80\%, $N = 84$) and a test set (20\%, $N = 20$).
+% The models were fit on the training set and made predictions for the test set.
+To quantify model performance, we used two metrics, prediction accuracy and the Brier score.
+Prediction accuracy is defined as the fraction of correct predictions.
+We converted model probabilities for violent or non-violent behavior into binary predictions by comparing with 0.5. In other words, if a model prediction for observation $i$, $\hat{y}_i$, is larger than 0.5 then the predicted label is violent, otherwise it is non-violent.
+The Brier score is defined using $N^{-1}\sum_{i=1}^N\left(\hat{y}_i-y_{i}\right)^2$, i.e., the mean squared error between the observed labels, $y$ and the model predictions.
+
+\autoref{tb:predictions} shows the prediction accuracy and the Brier score averaged across the 20-folds.
+
+\begin{table}[!ht]
+    \caption{Predictive performance for multiple methods. Values are averaged across 20 cross validations, }
+    \label{tb:predictions}
+    \centering
+    \begin{tabular}{lrrrr}
+        \toprule
+        & \multicolumn{2}{c}{Classification} & \multicolumn{2}{c}{Brier score}\\
+        \cmidrule(lr){2-3}  \cmidrule(lr){4-5}
+        Method & Train & Test & Train & Test \\
+        \midrule \\
+        LR-LTM              &   &   &   & \\
+        LR-Intercept        &   &   &   & \\
+        LR-No IFTE          &   &   &   & \\
+        LR-Violence         &   &   &   & \\
+        LR                  &   &   &   & \\
+        Random forest       &   &   &   & \\
+        GBM                 &   &   &   & \\
+        \bottomrule
+    \end{tabular}
+\end{table}
 
 
 
-\subsection{Machine Learning Alternatives}
-A
-This section discusses the four alternative considered, naive logistic regression, random forest, boosted regression trees.
+\begin{figure}[!ht]
+    \centering
+    % \includegraphics{}
+    \missingfigure{}
+    \caption{ROC curves.}
+    \label{fig:roc_curves}
+\end{figure}
 
 
-\subsubsection{Missing value imputation and data reduction}
-The four machine learning methods described above are designed for purely rectangular data.
-That is, each row of the data set contains one outcome (aggressive or not) and a number of predictors.
-However, the raw data contains repeated observations.
-For example, some patients were rated multiple times but others only once.
-This means that some preprocessing of the data is needed before these methods can be applied.
-Here we discuss missing data handling and the data reduction techniques applied.
-
-\paragraph{Missing values}
-The four alternative methods do not handle missing values.
-Although list-wise deletion is an option, this may results in deleting many observations.
-We used the R package \code{mice} \parencite{vanBuuren2011mice} to impute missing values.
-%Rather than imputing one single value for each missing observation, \code{mice} imputes multiple, which leads to multiple data sets.
-%While this increases the computational complexity of the procedures, it also propagates uncertainty about the missing observations to the results.
+\section{Interpretation of the LTM}
 
 
-\paragraph{Data reduction}
-After imputing missing values in the data, it remains problematic that there are multiple raters
 
-
-\section{Empirical Example}
-
-\subsection{Data set about Forensic Psychiatric}
-doei
-\subsection{Discussion}
+\section{Discussion}
 Summary
 
 Hybrid is probably most predictive.
@@ -372,8 +360,50 @@ Hybrid is probably most predictive.
 \subsection{Limitations}
 
 \printbibliography
+\newpage
 
-%\appendix
+\appendix
+
+\section{IFTE items}
+
+\begin{table}[!ht]
+    \centering
+    \caption{%
+ 	Overview of the 22 IFTE Items, the factor on which they load, and origin of the question. Adapted from Table~1 of \textcite{schuringa2014inter}.
+ 	}
+ 	\label{tb:IFTE_items}
+ 	\begin{tabular}{>{\small}llH}
+%  	\begin{tabular}{>{\small}lll}
+ 	\toprule
+    Item description                                                                                        &   Factor                  &   Origin                  \\
+    \midrule
+    Does the patient show problem insight?                                                                  &   Protective behaviors    &   HKT-R                   \\
+    Does the patient cooperate with your treatment?                                                         &   Protective behaviors    &   HKT-R                   \\
+    Does the patient admit and take responsibility for the crime(s)?                                        &   Protective behaviors    &   HKT-R                   \\
+    Does the patient show adequate coping skills?                                                           &   Protective behaviors    &   HKT-R                   \\
+    Does the patient have balanced daytime activities?                                                      &   Resocialization Skills  &   HKT-R                   \\
+    Does the patient show sufficient labor skills?                                                          &   Resocialization Skills  &   HKT-R                   \\
+    Does the patient show sufficient common social skills?                                                  &   Resocialization Skills  &   HKT-R                   \\
+    Does the patient show sufficient skills to take care of oneself?                                        &   Resocialization Skills  &   HKT-R                   \\
+    Does the patient show sufficient financial skills?                                                      &   Resocialization Skills  &   Proposed by clinicians  \\
+    Does the patient show impulsive behavior?                                                               &   Problematic behavior    &   HKT-R                   \\
+    Does the patient show antisocial behavior?                                                              &   Problematic behavior    &   HKT-R                   \\
+    Does the patient show hostile behavior?                                                                 &   Problematic behavior    &   HKT-R                   \\
+    Does the patient show sexual deviant behavior?                                                          &   Problematic behavior    &   Proposed by clinicians  \\
+    Does the patient show manipulative behavior?                                                            &   Problematic behavior    &   Proposed by clinicians  \\
+    \thead[l]{Does the patient comply with the rules\\ and conditions of the center and/or the treatment?}  &   Problematic behavior    &   HKT-R                   \\
+    Does the patient have antisocial associates?                                                            &   Problematic behavior    &   HKT-R                   \\
+    \thead[l]{Does the patient use his medication in a consistent and adequate manner?}                   &   Protective behaviors    &   Proposed by clinicians  \\
+    Does the patient have psychotic symptoms?                                                               &   Problematic behavior    &   HKT-R                   \\
+    Does the patient show skills to prevent drug and alcohol use?                                           &   Protective behaviors    &   ASP                     \\
+    Does the patient use any drug or alcohol?                                                               &   Problematic behavior    &   HKT-R                   \\
+    Does the patient show skills to prevent physical aggressive behavior?                                   &   Protective behaviors    &   ASP                     \\
+    Does the patient show skills to prevent sexual deviant behavior?                                        &   Protective behaviors    &   ASP                     \\
+    \bottomrule
+ 	\end{tabular}
+\end{table}
+
+
 %\section{EM Algorithm}
 %
 %Initial values are found using a few steps of an EM-algorithm that disregards the priors and hyperparameters.
